alignment fix below logo wrapper

--- a/resources/assets/css/mobile/style.css
+++ b/resources/assets/css/mobile/style.css
@@ -226,7 +226,7 @@ transition: all 0.3s ease-out;
 .top2-wrapper{position: relative; padding-top: 20px;}
 .top2{position: relative; background: #fff;}
 
-header{position: absolute; left: 43%; bottom: -68px; margin-left: -37px; z-index: 30;}
+header{position: absolute; bottom: -68px; z-index: 30; display: flex; justify-content: center; width: 100%; left: 0 !important}
 header div a img { width: 230px;}
 
 .fixed-menu{position: fixed; right: 50px; top: 0; z-index: 120; width: 66px;}
@@ -283,7 +283,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f27509', end
 
 .site-content{position: relative; padding-bottom: 70px;}
 
-#content{position: relative; padding-top: 60px; padding-bottom: 0px; z-index: 40;}
+#content{position: relative; padding-top: 80px; padding-bottom: 0px; z-index: 40;}
 #content2{position: relative; padding-top: 0px; padding-bottom: 0px; z-index: 40;}
 
 .span-engl{font-family: 'Roboto'; font-weight: 300;}
@@ -1671,7 +1671,7 @@ transition: all 0.3s ease-out;
 
 }
 @media (max-width: 991.98px) {
-
+    #content { padding-top: 115px;}
     .phone1{display: none;}
     .divider-ps{display: none;}
     .social-block{display: none;}
